# world-cup-predictor

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/raw/: matches.csv  teams.csv  wc2026_groups.csv
notebooks/: 01_data_exploration.ipynb  02_elo_ratings.ipynb  03_poisson_model.ipynb  04_group_stage.ipynb  04_tournament_simulation.ipynb  05_round_of_32.ipynb  06_round_of_16.ipynb  07_quarterfinals.ipynb  08_semifinals.ipynb  09_final.ipynb  90_knockout_scores.ipynb
scripts/: build_notebooks.py  fetch_worldcup_data.py  generate_seed_data.py
src/wcpredictor/: __init__.py  cli.py  config.py  visualization.py
src/wcpredictor/data/: __init__.py  loader.py  preprocess.py  tournament_state.py
src/wcpredictor/evaluation/: __init__.py  metrics.py
src/wcpredictor/models/: __init__.py  base.py  elo.py  poisson.py
src/wcpredictor/simulation/: __init__.py  match.py  tournament.py
tests/: conftest.py  test_cli.py  test_data.py  test_elo.py  test_metrics.py  test_outcomes.py  test_poisson.py  test_tournament.py  test_tournament_state.py
